fix validators in register

--- a/src/app/components/articles/article-type-small/article-type-small.component.scss
+++ b/src/app/components/articles/article-type-small/article-type-small.component.scss
@@ -40,6 +40,9 @@
         span {
           padding: 2px;
           background-color: $secondary-text-color;
+          border-radius: $small-border;
+          padding-left: $small-border;
+          padding-right: $small-border;
         }
       }
 
