--- a/src/app/components/user/connection/connection.component.html
+++ b/src/app/components/user/connection/connection.component.html
@@ -23,36 +23,38 @@
         <div class="register-field">
           <label for="email">Email : <span>*</span></label>
           <input type="email" formControlName="email">
-          <div *ngIf="userForm.controls['email'].errors && !userForm.controls['email'].pristine" class="error-msg">
-            <div [hidden]="!userForm.controls['email'].errors['required']">Requis</div>
-            <div [hidden]="!userForm.controls['email'].invalid">Requis</div>
-          </div>
+          <mat-error *ngIf="userForm.get('email')?.invalid">
+            {{ userForm.get('email')?.getError('email')?.rules }}
+          </mat-error>
         </div>
         <div class="register-field">
           <label for="username">Pseudo : <span>*</span></label>
           <input type="text" formControlName="username">
           <div *ngIf="userForm.controls['username'].errors && !userForm.controls['username'].pristine"
             class="error-msg">
-            <div [hidden]="!userForm.controls['username'].errors['required']">Requis</div>
-            <div [hidden]="!userForm.controls['username'].invalid">Requis</div>
+            <mat-error *ngIf="userForm.get('username')?.invalid">
+              {{ userForm.get('username')?.getError('username')?.rules }}
+            </mat-error>
           </div>
         </div>
         <div class="register-field">
           <label for="password">Mot de passe : <span>*</span></label>
-          <input type="text" formControlName="password">
+          <input type="password" formControlName="password">
           <div *ngIf="userForm.controls['password'].errors && !userForm.controls['password'].pristine"
             class="error-msg">
-            <div [hidden]="!userForm.controls['password'].errors['required']">Requis</div>
-            <div [hidden]="!userForm.controls['password'].invalid">Requis</div>
+            <mat-error *ngIf="userForm.get('password')?.invalid && userForm.get('confirmPassword')?.invalid">
+              {{ userForm.get('password')?.getError('password')?.rules }}
+            </mat-error>
           </div>
         </div>
         <div class="register-field">
           <label for="confirmPassword">Confirmez votre mot de passe : <span>*</span></label>
-          <input type="text" formControlName="confirmPassword">
+          <input type="password" formControlName="confirmPassword">
           <div *ngIf="userForm.controls['confirmPassword'].errors && !userForm.controls['confirmPassword'].pristine"
             class="error-msg">
-            <div [hidden]="!userForm.controls['confirmPassword'].errors['required']">Requis</div>
-            <div [hidden]="!userForm.controls['confirmPassword'].invalid">Requis</div>
+            <mat-error *ngIf="userForm.get('confirmPassword')?.invalid && userForm.get('password')?.invalid">
+              {{ userForm.get('confirmPassword')?.getError('confirmPassword')?.rules }}
+            </mat-error>
           </div>
         </div>
         <div class="register-button">
