--- a/src/app/components/user/information/information.component.html
+++ b/src/app/components/user/information/information.component.html
@@ -40,7 +40,7 @@
             Supprimer le compte
           </mat-panel-title>
         </mat-expansion-panel-header>
-        Etes vous sûr ?<br>
+        Etes-vous sûr de vouloir supprimer le compte ?<br>
         <button type="submit" (click)="handleDelete()" class="delete-btn">Supprimer</button>
       </mat-expansion-panel>
 
