--- a/src/app/pages/profiles/profiles.component.html
+++ b/src/app/pages/profiles/profiles.component.html
@@ -52,10 +52,10 @@
           <mat-expansion-panel> 
             <mat-expansion-panel-header>
               <mat-panel-title class="delete-btn-header">
-                Supprimer le compte
+                Supprimer le profil
               </mat-panel-title>
             </mat-expansion-panel-header>
-            Etes vous sûr ?<br>
+            Etes vous sûr de vouloir supprimer le profil ?<br>
             <div (click)="deleteProfile()">Supprimer</div>
           </mat-expansion-panel>
         </div>
