--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -124,6 +124,11 @@
 
     button {
       @include buttons;
+      border-radius: $big-border;
+      border-color: $fairy-color;
+        &:hover {
+          border-color: $secondary-text-color;
+        }
     }
   }
 }
