--- a/src/app/components/articles/article/title/title.component.scss
+++ b/src/app/components/articles/article/title/title.component.scss
@@ -17,6 +17,7 @@
     margin-bottom: $small-border;
     line-height: $main-line-height;
     font-size: 16px;
+    text-align: justify;
 
     ::first-letter {
       font-family: "Glam-queen";
