--- a/src/app/components/comment/comment.component.scss
+++ b/src/app/components/comment/comment.component.scss
@@ -6,11 +6,12 @@
   margin-bottom: $main-border;
   border-radius: 5px;
   position: relative;
+  word-break: break-word;
 
   h4 {
     font-size: 16px;
     margin-bottom: 5px;
-    color : $secondary-text-color;
+    color: $secondary-text-color;
   }
 
   p {
