fix validators + css + forms in login/register

--- a/src/_import.scss
+++ b/src/_import.scss
@@ -25,7 +25,8 @@ $min-width-desktop: 800px;
   color: $secondary-text-color;
   background-color: white;
   padding: $main-border;
-  border: solid 1px $secondary-text-color;
+  border: solid 1px $fairy-color;
+  border-radius: $big-border;
   cursor: pointer;
   height: 50px;
   width: max-content;
