--- a/src/app/pages/users/sugar-meter/sugar-meter.component.html
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.html
@@ -7,17 +7,15 @@
           Voici votre Sucromètre personnalisé ! &nbsp;
         </mat-panel-title>
       </mat-expansion-panel-header>
-      <p id="meter-description-text">&nbsp;L'OMS recommande que les sucres libres ne représentent pas plus de 10%
-        de l'apport énergétique
-        quotidien, même si
-        idéalement il conviendrait de réduire les surcres libres à 5% de l'apport énergétique total.
-        <br>&nbsp;Cela signifie donc que:
-        <br>- Les adultes ne devraient pas consommer plus de 30g de sucres libres par jour (soit 7 morceaux de sucres)
-        <br>- Les enfants de 7 à 10 ans ne devraient pas consommer plus de 24g de sucres libres par jour (soit 6
+      <p id="meter-description-text">L'OMS recommande que les sucres libres ne représentent pas plus de 10%
+        de l'apport énergétique quotidien, même si idéalement il conviendrait de réduire les sucres libres à 5% de l'apport énergétique total.<br>
+        <br>Cela signifie donc que:
+        <br> • Les adultes ne devraient pas consommer plus de 30g de sucres libres par jour (soit 7 morceaux de sucres)
+        <br> • Les enfants de 7 à 10 ans ne devraient pas consommer plus de 24g de sucres libres par jour (soit 6
         morceaux
         de sucres)
-        <br>- Les enfants de 4 à 6 ans ne devraient pas consommer plus de 19g de sucres libres par jour (soit 5 morceaux
-        de sucres)
+        <br> • Les enfants de 4 à 6 ans ne devraient pas consommer plus de 19g de sucres libres par jour (soit 5 morceaux
+        de sucres) <br>
         <br><span>Ainsi, notre Sucromètre vous permet de savoir si vous avez dépassé votre quota de sucres libres
           journalier !</span>
       </p>
@@ -56,7 +54,7 @@
         </div>
 
         <div class="input-container icone-create">
-          <label>Icone
+          <label>Icône
           </label>
           <div class="logo-list">
             <div *ngFor="let logo of logos" (click)="selectLogo(logo)">
