--- a/src/app/pages/users/sugar-meter/sugar-meter.component.scss
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.scss
@@ -23,7 +23,7 @@
     }
 
     p {
-      text-align: left;
+      text-align: justify;
       padding: $small-border;
       margin-left: $small-border;
       margin-right: $small-border;
