--- a/src/app/components/searchbar/searchbar.component.scss
+++ b/src/app/components/searchbar/searchbar.component.scss
@@ -1,31 +1,36 @@
 @use "/src/_import.scss" as *;
 
 .search-from {
-    width:100%;
+    width: 100%;
+
     .search-container {
         position: relative;
+
         .search-icon {
             position: absolute;
             top: 50%;
-            right: 10px; 
+            right: 10px;
             transform: translateY(-50%);
             background: transparent;
             border: none;
             cursor: pointer;
+            color: $secondary-text-color;
         }
+
         input {
             display: block;
             height: auto;
             width: 100%;
             padding: $small-border;
             border-radius: 0.3em;
-            border: 1px solid $secondary-text-color;
+            border: 1px solid $fairy-color;
             background-color: white;
             line-height: 1.3;
             color: $secondary-text-color;
             box-shadow: none;
             transition: border-color .2s;
         }
+
         button {
             background-color: $fairy-color;
             border-radius: 5px;
@@ -33,6 +38,6 @@
             padding: $small-border;
             font-size: 16px;
         }
-      }
-    
+    }
+
 }
