--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
       <ul class="divnav">
         <li id="accueil" [routerLink]="APP_ROUTES.index">
           <i id="fahome" class="fa fa-home" aria-hidden="true"></i>
-          <a>Accueil</a>
+          <a class="accueil">Accueil</a>
         </li>
         <li class="categ" id="categ2" [routerLink]="APP_ROUTES.categories">
           <i class="fa fa-duotone fa-cubes-stacked"
