--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -5,6 +5,6 @@
         <img class="image" src="{{ pictureRoute + '4-not-found.png' }}" alt="4" />
     </div>
     <h1 class="title">Sugar not found</h1>
-    <a appHoveringEffect class="link" routerLink="">Go home</a>
+    <a appHoveringEffect class="link" routerLink="">Retour à l'accueil</a>
   </section>
   
