--- a/src/app/pages/search/search.component.scss
+++ b/src/app/pages/search/search.component.scss
@@ -1,5 +1,9 @@
 @use "/src/_import.scss" as *;
 
+section {
+  margin-bottom: $big-border;
+}
+
 .search {
   margin-top: $big-border;
   display: flex; 
@@ -11,16 +15,36 @@
 }
 
 .small {
-  margin-top:$big-border;
+    margin-top:$big-border;
     margin-bottom: $big-border;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: $main-border;
   }
 
-  .child{
-    display:inline-block;
-    padding: $small-border;
+.child{
+  display:inline-block;
+  padding: $small-border;
+}
+.title {
+  margin-top: $big-border;
+  color: $secondary-text-color;
+  text-align:center;
+}
+  
+
+.image {
+  width: 200px;
+
+  &:nth-of-type(2) {
+      width: 160px;
+  }
+}
+
+  .not-found-404 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   @media(max-width:$min-width-desktop) {
@@ -34,5 +58,12 @@
       .article-small {
         margin: $main-border;
       }
+    }
+
+    .not-found-404 {
+      flex-direction: column;
+    }
+    .title{
+
     }
   }
