requested changes + css opti

--- a/src/app/components/articles/article/comment/comment.component.scss
+++ b/src/app/components/articles/article/comment/comment.component.scss
@@ -30,7 +30,7 @@
     }
 
     .submitButton {
-      color: $secondary-text-color;
+      color: white;
       padding: 10px 20px;
       margin-top: $small-border;
       border: none;
