--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="comment" class="comment">
-    <h4>{{ getNameOrUsername() | titlecase }}</h4>
-    <p class="creation-date"> {{ comment.creation_date | date }}</p>
-    <p>{{ comment.content }}</p>
-    <i *ngIf="(user | async)?.id == comment.user.id" class="fa-solid fa-trash {{categorySlug}}-comment delete-icon" (click)="deleteComment(comment)"></i>
+  <h4>{{ getNameOrUsername() | titlecase }}</h4>
+  <p class="creation-date"> {{ comment.creation_date | date }}</p>
+  <p>{{ comment.content }}</p>
+  <i *ngIf="(user | async)?.id == comment.user.id" class="fa-solid fa-trash {{categorySlug}}-color delete-icon"
+    (click)="deleteComment(comment)"></i>
 </div>
