--- a/src/app/pages/creation-article/creation-article.component.scss
+++ b/src/app/pages/creation-article/creation-article.component.scss
@@ -1,63 +1,70 @@
 @use "/src/_import.scss" as *;
 
-.infos{
-    border:solid 1px $fairy-color;
-    border-radius:5px;
-    margin-bottom: 1rem;
-    .checkbox{
-        font-family: "Glam-queen";
-        color:$fairy-color;
-        font-size:1.5rem;
-        font-weight:bold;
-        padding:1rem;
-    }
-.fields-container{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:1rem;
-
-    h1, .categories {
-        font-family: "Glam-queen";
-        color:$fairy-color;
-    }
-    h1 {
-        font-size:2rem;
-    }
-
-    .img {
-        width:500px;
-        height:300px;
-        border:solid 1px $fairy-color;
-        border-radius:5px;
-        background-size: cover;
-        background-position: center;
-    }
-    .text {
-        width:400px;
-        height:30px;
-        justify-content: center;
-        text-align: center;
-        border-radius: 10px;
-    }
-
-    .categories {
-        font-size:1.5rem;
-        font-weight: bold;
-    }
-
-    .categories, select {
-        border-radius: 5px;
-    }
-}
-}
-
-button {
-    background-color: $fairy-color;
+.infos {
+    border: solid 1px $fairy-color;
     border-radius: 5px;
-    border: 0;
-    padding: $small-border;
-    font-size: 16px;
-    width:30%;
+    margin-bottom: 1rem;
+
+    .checkbox {
+        font-family: "Glam-queen";
+        color: $fairy-color;
+        font-size: 1.5rem;
+        font-weight: bold;
+        padding: 1rem;
+    }
+
+    .fields-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+
+        h1,
+        .categories {
+            font-family: "Glam-queen";
+            color: $fairy-color;
+        }
+
+        h1 {
+            font-size: 2rem;
+        }
+
+        .img {
+            width: 500px;
+            height: 300px;
+            border: solid 1px $fairy-color;
+            border-radius: 5px;
+            background-size: cover;
+            background-position: center;
+        }
+
+        .text {
+            width: 400px;
+            height: 30px;
+            justify-content: center;
+            text-align: center;
+            border-radius: 10px;
+        }
+
+        .categories {
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .categories,
+        select {
+            border-radius: 5px;
+        }
+    }
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    button {
+        @include buttons;
+        margin-bottom: $main-border;
+    }
 }
