fix add comment empty

--- a/src/app/components/articles/article/comment/comment.component.html
+++ b/src/app/components/articles/article/comment/comment.component.html
@@ -9,7 +9,7 @@
     class="comment-form">
     <textarea [(ngModel)]="commentForm.value.content" name="content" class="textArea" maxlength="255" rows="4" cols="50"
       required></textarea>
-    <button class="submitButton {{article.category.slug}}-background" type="submit">Ajouter un commentaire</button>
+    <button class="submitButton {{article.category.slug}}-background" type="submit" [disabled]="!commentForm.valid">Ajouter un commentaire</button>
   </form>
   <div *ngIf="!(connectionStatus | async)">Vous devez être connecté pour poster un commentaire. <span
       (click)="openModal()" class="{{article.category.slug}}-color connect-link">Connectez-vous !</span></div>
