Adding Dockerfile and config files (+ some fixes)

--- a/src/app/components/articles/article/comment/comment.component.scss
+++ b/src/app/components/articles/article/comment/comment.component.scss
@@ -27,6 +27,7 @@
       resize: vertical;
       min-height: 100px;
       resize: none;
+      padding: $main-border;
     }
 
     .submitButton {
