--- a/src/app/pages/creation-article/creation-article.component.html
+++ b/src/app/pages/creation-article/creation-article.component.html
@@ -7,8 +7,8 @@
         <div class="fields-container">
             <h1>Titre</h1>
             <input type="text" class="text" placeholder="Titre" [(ngModel)]="article.title">
-            <h1>Chapeau</h1>
-            <input type="text" class="text" placeholder="Chapeau" [(ngModel)]="article.leads">
+            <h1>Chapô</h1>
+            <input type="text" class="text" placeholder="Chapô" [(ngModel)]="article.leads">
             <h1>URL de l'image</h1>
             <input type="text" class="text" placeholder="URL de l'image" [(ngModel)]="article.publicationImage">
             <div class="img" [ngStyle]="{ 'background-image': 'url(' + article.publicationImage + ')'}"></div>
