--- a/src/app/pages/users/sugar-meter/sugar-meter.component.html
+++ b/src/app/pages/users/sugar-meter/sugar-meter.component.html
@@ -10,11 +10,11 @@
       <p id="meter-description-text">L'OMS recommande que les sucres libres ne représentent pas plus de 10%
         de l'apport énergétique quotidien, même si idéalement il conviendrait de réduire les sucres libres à 5% de l'apport énergétique total.<br>
         <br>Cela signifie donc que:
-        <br> • Les adultes ne devraient pas consommer plus de 30g de sucres libres par jour (soit 7 morceaux de sucres)
-        <br> • Les enfants de 7 à 10 ans ne devraient pas consommer plus de 24g de sucres libres par jour (soit 6
+        <br> • Les <b>adultes</b> ne devraient pas consommer plus de <b>30g</b> de sucres libres par jour (soit 7 morceaux de sucres)
+        <br> • Les <b>enfants de 7 à 10 ans</b> ne devraient pas consommer plus de <b>24g</b> de sucres libres par jour (soit 6
         morceaux
         de sucres)
-        <br> • Les enfants de 4 à 6 ans ne devraient pas consommer plus de 19g de sucres libres par jour (soit 5 morceaux
+        <br> • Les <b>enfants de 4 à 6 ans</b> ne devraient pas consommer plus de <b>19g</b> de sucres libres par jour (soit 5 morceaux
         de sucres) <br>
         <br><span>Ainsi, notre Sucromètre vous permet de savoir si vous avez dépassé votre quota de sucres libres
           journalier !</span>
