Modification page about us

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -21,4 +21,7 @@
     <ul class="list">
         <app-person *ngFor="let person of team" [person]="person"></app-person>
     </ul>
+    <div>
+        <p>Ce site est un projet de formation. Veuillez noter que cette plateforme est destinée uniquement à des fins de démonstration et que tout les potentiels commentaires sont générés par les utilisateurs sans modération.</p>
+    </div>
 </div>
