--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('../assets/images/barbieAd.jpg');
+    //background-image: url('../assets/images/barbieAd.jpg');
 
     background-size: 100%;
     background-position: top center;
